k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 2306211660-flight-be
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 2306211660-flight-be
  template:
    metadata:
      labels:
        app: 2306211660-flight-be
    spec:
      containers:
        - name: springboot-container
          image: clarissaindriana/2306211660-be:REPLACE_ME_TAG
          ports:
            - containerPort: 8080
