k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flight-2306211660-be-service
  namespace: default
spec:
  selector:
    app: 2306211660-flight-be
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
