k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 2306211660-flight-be-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: 2306211660-be.hafizmuh.site 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flight-2306211660-be-service
                port:
                  number: 80
